# country_named_entity_recognition

./: CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  update.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md
country_named_entity_recognition/: __init__.py  country_finder.py
country_named_entity_recognition/tests/: test_africa.py  test_asia.py  test_correct_countries.py  test_custom_variant.py  test_europe.py  test_georgia_country_vs_state.py  test_north_america.py  test_oceania.py  test_possessive.py  test_south_america.py  test_uk.py  test_usa.py  test_virgin_islands.py
countryfinder/: __init__.py  country_finder.py
countryfinder/tests/: test_africa.py  test_asia.py  test_correct_countries.py  test_georgia_country_vs_state.py  test_north_america.py  test_possessive.py  test_south_america.py  test_usa.py
src/country_named_entity_recognition/: __init__.py  common.py  country_finder.py  country_finder_spacy.py
tests/: test_africa.py  test_africa_spacy.py  test_asia.py  test_asia_spacy.py  test_correct_countries.py  test_correct_countries_spacy.py  test_custom_variant.py  test_europe.py  test_georgia_country_vs_state.py  test_north_america.py  test_oceania.py  test_possessive.py  test_south_america.py  test_uk.py  test_usa.py  test_virgin_islands.py
